--- a/index.html
+++ b/index.html
@@ -57,11 +57,11 @@
       }
 
       var buildUrl = "Build";
-      var loaderUrl = buildUrl + "/SPR2v1.loader.js";
+      var loaderUrl = buildUrl + "/SPR2V3.loader.js";
       var config = {
-        dataUrl: buildUrl + "/SPR2v1.data",
-        frameworkUrl: buildUrl + "/SPR2v1.framework.js",
-        codeUrl: buildUrl + "/SPR2v1.wasm",
+        dataUrl: buildUrl + "/SPR2V3.data",
+        frameworkUrl: buildUrl + "/SPR2V3.framework.js",
+        codeUrl: buildUrl + "/SPR2V3.wasm",
         streamingAssetsUrl: "StreamingAssets",
         companyName: "DefaultCompany",
         productName: "Samolov SPR",
