--- a/index.html
+++ b/index.html
@@ -57,11 +57,11 @@
       }
 
       var buildUrl = "Build";
-      var loaderUrl = buildUrl + "/SPR2Bv3.loader.js";
+      var loaderUrl = buildUrl + "/SPR2Bv4.loader.js";
       var config = {
-        dataUrl: buildUrl + "/SPR2Bv3.data",
-        frameworkUrl: buildUrl + "/SPR2Bv3.framework.js",
-        codeUrl: buildUrl + "/SPR2Bv3.wasm",
+        dataUrl: buildUrl + "/738937e448128773e46bbc409b04481c.data.unityweb",
+        frameworkUrl: buildUrl + "/475704b417938fe9240b9d47c44b70a7.js.unityweb",
+        codeUrl: buildUrl + "/9a461accda4f7fe51e06b6e3340cc870.wasm.unityweb",
         streamingAssetsUrl: "StreamingAssets",
         companyName: "DefaultCompany",
         productName: "Samolov SPR",
