--- a/index.html
+++ b/index.html
@@ -57,9 +57,9 @@
       }
 
       var buildUrl = "Build";
-      var loaderUrl = buildUrl + "/SPR2Bv4.loader.js";
+      var loaderUrl = buildUrl + "/SPR2.loader.js";
       var config = {
-        dataUrl: buildUrl + "/738937e448128773e46bbc409b04481c.data.unityweb",
+        dataUrl: buildUrl + "/8ec553a054bb2a98bf5080acb4a1ad88.data.unityweb",
         frameworkUrl: buildUrl + "/475704b417938fe9240b9d47c44b70a7.js.unityweb",
         codeUrl: buildUrl + "/9a461accda4f7fe51e06b6e3340cc870.wasm.unityweb",
         streamingAssetsUrl: "StreamingAssets",
